--- a/src/app.postcss
+++ b/src/app.postcss
@@ -11,3 +11,11 @@ body {
 textarea {
 	resize: none;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+input[type='number'] {
+	-moz-appearance: textfield;
+}
